Added documentation for inviting users to an event, changed invitation form to filter out users with pending invitations.

--- a/marketapp/listings/templates/FAQ/events.html
+++ b/marketapp/listings/templates/FAQ/events.html
@@ -14,6 +14,28 @@
       for the event, it should be submitted in 'YY-MM-DD' format or 'YY-MM-DD HH:MM' format.  Once
       you have filled in all the fields for your event, click on "Create" at the bottom of the
       form to finish creating your event.</p>
+    <h1>How to Invite Users to Your Event</h1>
+    <p>Once you have created an event, you'll be able to invite users on the site to your event.
+      There are two ways that you can do this.  The first way is through your events list view.
+      On the page where you can view all events you are associated with, for each event that you
+      are hosting there will be a button that says "INVITE".  Click on this button to be taken to
+      the invitation creation form.  On this page, you can select which users you would like to
+      invite to the particular event you selected "INVITE" for.  You are only able to send invitations
+      to users that currently do not have an invitation to the event or are not already a participant
+      in the event.  Ince you have selected the users you wish to invite, click on "Send" to create
+      the invitations.</p>
+    <p>The second way you can invite users to events is to view the users profile page.  Navigate to
+      "Community" in the navigation bar in the top right and in the dropdown select "Users".  On the
+      following page, click on the user that you would like to invite to be taken to their profile.
+      On the user's profile page, there will be a button at the top that says "INVITE".  Click on it
+      to be taken to an invitation form where you can select what events you would like to invite the
+      relevant user to.  You may also select other users on this page if you choose to do so, but be
+      warned, if you select multiple events, all users selected will be invited to the events.  Once
+      you have finished making your selections, click on "Send" to create the invitations.</p>
+    <p>Once invitations are made, you will have to wait for the recipients to either accept or reject
+      their invitation.  If they accept, they will be added as a participant to your event.  If they
+      reject, they will not be a part of your event unless you invite them again and they accept the
+      new invitation.</p>
     <h1>How to Edit/Delete an Event</h1>
     <p>If you decide that you need to edit an event, hover over "Events" in the top right
       navigation bar and click on it.  In the list for all your current events, for each event
