Implemented acceptance and declining of invites for users

--- a/marketapp/listings/templates/FAQ/events.html
+++ b/marketapp/listings/templates/FAQ/events.html
@@ -22,7 +22,7 @@
       the invitation creation form.  On this page, you can select which users you would like to
       invite to the particular event you selected "INVITE" for.  You are only able to send invitations
       to users that currently do not have an invitation to the event or are not already a participant
-      in the event.  Ince you have selected the users you wish to invite, click on "Send" to create
+      in the event.  Once you have selected the users you wish to invite, click on "Send" to create
       the invitations.</p>
     <p>The second way you can invite users to events is to view the users profile page.  Navigate to
       "Community" in the navigation bar in the top right and in the dropdown select "Users".  On the
