--- a/marketapp/listings/templates/FAQ/events.html
+++ b/marketapp/listings/templates/FAQ/events.html
@@ -36,6 +36,42 @@
       their invitation.  If they accept, they will be added as a participant to your event.  If they
       reject, they will not be a part of your event unless you invite them again and they accept the
       new invitation.</p>
+    <h1>How to Accept/Decline Invitations</h1>
+    <p>To view invitations that you have received for events hosted by other users, go to the
+      navigation bar in the top right, hover over "Events" and in the drop down select "Invites".
+      On this page you'll see all of your pending invitations.  Each invitation will have two buttons,
+      "Accept" and "Decline".  If you would like to accept an invitation and join an event, click on
+      "Accept".  You'll receive a confirmation dialogue asking if you are sure you would like to
+      accept the invitation.  If you are sure, click "Yes" and you'll be added as a participant to the
+      event.</p>
+    <p>If you are not interested in joining an event, then click on "Decline".  After clicking, you'll
+      receive a confirmation dialogue asking if you are sure you would like to decline the event or
+      not.  If you are sure, click "Yes" and you will not be added to the event and the invitation will
+      be deleted.  Be sure that you do not want to join the event, as you will not be able to join after
+      unless the host reinvites you.</p>
+    <h1>How to Drop Out of an Event</h1>
+    <p>If after accepting an invitation to an event and you feel that you do not want to participate
+      in it any longer, you may drop out of the event.  To do so, go to the navigation bar in the top
+      right and click on "Events".  On the following page that shows all of the events you are
+      participating in, for each event that you are a participant in, there will be a button in the
+      top right corner of each container that says "DROP OUT".  Clicking on this will result in a
+      confirmation dialogue box asking if you are sure that you want to drop out of the event.  If you
+      are sure that you no longer want to participate in the event, click "Yes".  Be sure about your
+      decision though, as you will not be able to join the event again unless the host reinvites you.
+      You may also remove yourself from events from the event detail page, which you can access by
+      clicking on the name of the event in the list of events you are in.</p>
+    <h1>How to Remove Participants From Your Event</h1>
+    <p>If you are the host of an event, you can remove participants if you need to after they have
+      accepted your invitation and joined the event.  To do so, go to the navigation bar in the top
+      right and click on "Events".  On the following page that shows all of the events you are
+      participating in, click on the event that you are hosting and want to remove users from.  On
+      the following page, you will see all the details for your event as well as a list of active
+      participants.  Each participant, next to their name and username, will have a button that says
+      "REMOVE".  Click on the button next to the user that you want to remove and a confirmation
+      dialogue will pop out asking if you are sure that you want to remove the user from your event.
+      If you are sure, click "Yes" and the user will be removed from the event.  If you decide that
+      you want to re-add them after, you will have to send them a new invite and wait for them to
+      accept it.</p>
     <h1>How to Edit/Delete an Event</h1>
     <p>If you decide that you need to edit an event, hover over "Events" in the top right
       navigation bar and click on it.  In the list for all your current events, for each event
@@ -62,5 +98,8 @@
     <h3 class="faq-question">How many participants can an event have?</h3>
     <p>You can invite as many participants as you would like to an event, as there is currently no
       limit.</p>
+    <h3 class="faq-question">Do invitations expire?</h3>
+    <p>Invitations will remain indefinitely on site until you accept or decline it, or if the event
+      the invitation is to is deleted.</p>
   </div>
 {% endblock %}
