--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -47,6 +47,11 @@
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'invitations' %}">Invites</a>
               </div>
             </div>
+            {% if request.user.wishlist %}
+              <li class="site-nav-url" style="margin-left: -3px;"><a href="{% url 'wishlist-detail' pk=request.user.wishlist.pk %}">Wishlist</a></li>
+            {% else %}
+              <li class="site-nav-url" style="margin-left: -3px;"><a href="">Wishlist</a></li>
+            {% endif %}
             <li class="site-nav-url" style="margin-left: -3px;"><a href="{% url 'faq' %}">FAQ</a></li>
             <li class="site-nav-url" style="margin-left: -4px;"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
           {% else %}
