--- a/marketapp/listings/templates/events/events.html
+++ b/marketapp/listings/templates/events/events.html
@@ -34,7 +34,10 @@
             <div class="col-lg-12">
               <a href="{{ event.get_absolute_url }}"><h2 class="event-title">{{ event.title }}</h2></a>
               <div class="event-buttons">
-                <a href=""><span class="btn btn-red delete-btn">DECLINE</span></a>
+                <a onclick="return confirm('Are you sure you want to drop out from the event?')"
+                  href="{% url 'remove-participant' event_pk=event.pk user_pk=request.user.pk %}">
+                  <span class="btn btn-red drop-out-btn">DROP OUT</span>
+                </a>
               </div>
             </div>
             <div>{{ event.context }}</div>
