Added documentation for creating a wishlist

--- a/marketapp/listings/templates/wishlists/wishlist_detail.html
+++ b/marketapp/listings/templates/wishlists/wishlist_detail.html
@@ -39,6 +39,6 @@
     {% endfor %}
   </div>
   {% else %}
-    <p style="text-align: center;">There are no wishlist items currently.</p>
+    <p style="text-align: center; margin-top: 20px;">There are no wishlist items currently.</p>
   {% endif %}
 {% endblock %}
