--- a/marketapp/listings/templates/wishlists/wishlist_detail.html
+++ b/marketapp/listings/templates/wishlists/wishlist_detail.html
@@ -9,7 +9,7 @@
       </div>
       <div style="margin-top: 20px;">{{ wishlist.description }}</div>
       <div class="add-button">
-        <a href="">
+        <a href="{% url 'edit-wishlist' pk=wishlist.pk %}">
           <div class="btn btn-blue" style="margin-top: 20px; margin-bottom: 20px;">
             Edit Wishlist
           </div>
