--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -114,9 +114,21 @@
   margin-bottom: 10px;
 }
 
+.wishlist-listing-header {
+  text-align: center;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
 .listing-item-container {
   text-align: center;
   border-bottom: 1px solid grey;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+}
+
+.listing-offer-container {
+  text-align: center;
   padding-bottom: 25px;
   margin-bottom: 30px;
 }
