--- a/marketapp/listings/templates/wishlists/wishlist_listings.html
+++ b/marketapp/listings/templates/wishlists/wishlist_listings.html
@@ -17,7 +17,7 @@
         {% if listing.listingEnded == False %}
           <div class="wishlist-listing-container">
             <div class="wishlist-listing-header center-block col-lg-11">
-              <a href="">
+              <a href="{% url 'wishlist-listing-detail' pk=listing.pk %}">
                 <h3 class="wishlist-listing-name">{{ listing.name }}</h3>
               </a>
               <h5>Searching for...</h5>
