Added documentation for creating a wishlist listing

--- a/marketapp/listings/templates/FAQ/wishlists.html
+++ b/marketapp/listings/templates/FAQ/wishlists.html
@@ -26,6 +26,22 @@
       this button will result in a confirmation dialogue popping up asking if you are sure you want
       to remove the item from your wishlist.  If you are sure, click "Yes" and the item will be removed.
       If you need to add the item back at any time, you can easily do so by editing your wishlist.</p>
+    <h1>How to Create a Wihslist Listing</h1>
+    <p>Once you have added items to your wishlist, you'll be able to create search listings for them.
+      Other users will be able to contact you if they see they have an item you seek and negotiate a
+      trade or sale with you.  In order to create a listing, hover over "My Listings" in the navigation
+      bar in the top right and click on "Wishlist".  On this page, there will be a button under the page
+      header that says "Create Listing".  Clicking on the button will take you to the form where you can
+      create a wishlist listing using items on your wishlist.  When creating your listing, make sure to
+      give it a name, when you want your listing to end and any notes that you want to add.  Your
+      listing must also have at least one item to offer or a monetary amount.  You may include both
+      items and money to offer however. Once you have added all the required info, click on "Create"
+      to finish creating your listing.</p>
+    <p>You can also quickly create a listing for an item on your wishlist by clicking on "LIST" under
+      the item you want to list.  This will take you to the same form as above but have the item you
+      cicked on already preselected.  However, note that even if you deselect the item you were creating
+      the listing for it will still be added to your listing so make sure that you actually want to
+      create a listing for the item before doing so.</p>
   </div>
   <div class="faq-content col-md-10">
     <h1>FAQs for Wishlists</h1>
