--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -23,6 +23,7 @@
               <div class="dropdown-content mystuff-dropdown-all-listings">
                 <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'all-offer-listings' %}">Offers</a>
                 <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'all-auction-listings' %}">Auctions</a>
+                <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'all-wishlist-listings' %}">Wishlist</a>
               </div>
             </div>
             <div class="dropdown">
