--- a/marketapp/listings/templates/wishlists/wishlist_listings.html
+++ b/marketapp/listings/templates/wishlists/wishlist_listings.html
@@ -117,6 +117,23 @@
         {% endif %}
       {% endfor %}
     </div>
+    <div class="pagination center-block container-fluid" style="margin-bottom: 20px;">
+      <div class="step-links">
+          {% if page_obj.has_previous %}
+              <a href="?page=1">&laquo; first</a>
+              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+          {% endif %}
+
+          <div class="current" style="text-align: center;">
+              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+          </div>
+
+          {% if page_obj.has_next %}
+              <a href="?page={{ page_obj.next_page_number }}">next</a>
+              <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+          {% endif %}
+      </div>
+    </div>
   {% else %}
     <p style="text-align: center;">You don't have any wishlist listings currently.</p>
   {% endif %}
