--- a/marketapp/listings/templates/wishlists/wishlist_listings.html
+++ b/marketapp/listings/templates/wishlists/wishlist_listings.html
@@ -100,7 +100,7 @@
               {% endif %}
             </div>
             <div class="center-block" style="text-align: center;">
-              <a href="">
+              <a href="{% url 'relist-wishlist-listing' pk=listing.id %}">
                 <div class="btn btn-blue" style="margin-top: 15px;
                   display: inline-block;">
                   RELIST
