Added documentation for editing, relisting and deleting a wishlist listing

--- a/marketapp/listings/templates/FAQ/wishlists.html
+++ b/marketapp/listings/templates/FAQ/wishlists.html
@@ -26,7 +26,7 @@
       this button will result in a confirmation dialogue popping up asking if you are sure you want
       to remove the item from your wishlist.  If you are sure, click "Yes" and the item will be removed.
       If you need to add the item back at any time, you can easily do so by editing your wishlist.</p>
-    <h1>How to Create a Wihslist Listing</h1>
+    <h1>How to Create a Wishlist Listing</h1>
     <p>Once you have added items to your wishlist, you'll be able to create search listings for them.
       Other users will be able to contact you if they see they have an item you seek and negotiate a
       trade or sale with you.  In order to create a listing, hover over "My Listings" in the navigation
@@ -42,6 +42,29 @@
       cicked on already preselected.  However, note that even if you deselect the item you were creating
       the listing for it will still be added to your listing so make sure that you actually want to
       create a listing for the item before doing so.</p>
+    <h1>How to Edit/Relist/Delete a Wishlist Listing</h1>
+    <p>If you want to edit an active wishlist listing, relist an expired wishlist listing or delete
+      a wishlist listing, you will need to view your list of wishlist listings.  In the navigation
+      bar in the top right, hover over "My Listings" and select "Wishlist" in the dropdown.  You'll
+      then be taken to your list of wishlist listings where you can see active and inactive listings.
+      Each listing will have two buttons in their container, "EDIT" and "DELETE" for active listings
+      and "RELIST" and "DELETE" for inactive listings.</p>
+    <p>To edit an active listing, click "EDIT" in the container for the listing you want to edit.
+      When editing your listing, you can change the name of the listing, what wishlist items you're
+      seeking, the items and monetary amount you are offering and notes about the listing.  You will
+      not be able to change the ending time for the listing until it expires however.  Once you have
+      finished making the desired changes to your listing, click on "Update" to finish editing your
+      listing.</p>
+    <p>Relisting an expired listing is almost the same as editing an active listing, except that you
+      can change the ending time for your listing.  To relist a listing, click on "RELIST" in the
+      container of the listing you want to relist.  Relisting requires the same fields to be filled in
+      as when creating a listing.  Once you have finished making the changes to your listing, click on
+      "Relist" to finalize relisting your wishlist listing.</p>
+    <p>You may delete an active or inactive wishlist listing if you choose.  Click on "DELETE" in the
+      container for the listing that you want to delete.  You'll be taken to a confirmation page
+      asking you to confirm if you want to delete the listing or not.  If you are sure, click "Yes"
+      and the listing will be deleted.  Be warned though that once the listing is deleted, it can not
+      be undone.</p>
   </div>
   <div class="faq-content col-md-10">
     <h1>FAQs for Wishlists</h1>
