Added method for a user to quickly add an item to their wishlist, owned or unowned.  Added documentation for quickly adding items to wishlists

--- a/marketapp/listings/templates/FAQ/wishlists.html
+++ b/marketapp/listings/templates/FAQ/wishlists.html
@@ -26,6 +26,17 @@
       this button will result in a confirmation dialogue popping up asking if you are sure you want
       to remove the item from your wishlist.  If you are sure, click "Yes" and the item will be removed.
       If you need to add the item back at any time, you can easily do so by editing your wishlist.</p>
+    <h1>How to Add Unowned Items to Your Wishlist</h1>
+    <p>Users have the option to add unowned items to their wishlist.  When viewing a listing on the
+      site, you can see a view of all the items that are included in the listing.  If you feel that
+      you want one of the items you see listed, you can easily add it to your wishlist.  Click on the
+      item's image and you'll be taken to the item's detail page.  At the bottom of this page there
+      will be a button that says "Add to Wishlist".  Click on the button and a pop up dialogue box
+      will appear asking if you are sure you want to add the item to your wishlist.  If you are
+      sure, click "Yes".  This will result in a copy of the item being created that you own and
+      it will be added to your wishlist after.</p>
+    <p>Users can also add items they own in the same way as above, but a copy of the item will not
+      be made.</p>
     <h1>How to Create a Wishlist Listing</h1>
     <p>Once you have added items to your wishlist, you'll be able to create search listings for them.
       Other users will be able to contact you if they see they have an item you seek and negotiate a
