--- a/marketapp/listings/templates/items/item_detail.html
+++ b/marketapp/listings/templates/items/item_detail.html
@@ -43,5 +43,11 @@
         {% endfor %}
       {% endif %}
     </div>
+    {% if request.user != item.owner %}
+      <a onclick="return confirm('Are you sure you want to add this item to your wishlist?')" 
+        href="{% url 'quick-add-item-to-wishlist' pk=item.pk %}">
+        <div class="btn btn-blue col-lg-2 center-block" style="margin-bottom: 20px;">Add To Wishlist</div>
+      </a>
+    {% endif %}
   </div>
 {% endblock %}
