--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -16,8 +16,8 @@
         <a href="{% url 'index' %}"><h2>Market Place Image</h2></a>
       </div>
         <ul class="col-md-8 site-nav">
-          <li class="site-nav-url"><a href="">Profile</a></li>
           {% if user.is_authenticated %}
+            <li class="site-nav-url"><a href="">Profile</a></li>
             <div class="dropdown">
               <div class="site-nav-url dropbtn" style="margin-left: -4px;">All Listings</div>
               <div class="dropdown-content mystuff-dropdown-all-listings">
@@ -63,6 +63,7 @@
             <li class="site-nav-url" style="margin-left: -3px;"><a href="{% url 'faq' %}">FAQ</a></li>
             <li class="site-nav-url" style="margin-left: -4px;"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
           {% else %}
+            <li class="site-nav-url"><a href="{% url 'index' %}">Home</a></li>
             <li class="site-nav-url" style="margin-left: -4px;"><a href="{% url 'login'%}?next={{request.path}}">Sign Up/Login</a></li>
           {% endif %}
         </ul>
