Added tests and view for profile edit form.  Added documentation for editing profiles

--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -10,5 +10,6 @@
     <li><a href="{% url 'faq-listings' %}">Listings Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-events' %}">Events Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-wishlists' %}">Wishlists Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-profiles' %}">Profile Documentation/FAQ</a></li>
   </ul>
 {% endblock %}
