--- a/marketapp/listings/templates/profiles/profile_detail.html
+++ b/marketapp/listings/templates/profiles/profile_detail.html
@@ -10,7 +10,7 @@
             Edit Account
           </div>
         </a>
-        <a href="">
+        <a href="{% url 'edit-profile' pk=profile.pk %}">
           <div class="btn btn-blue profile-btn">
             Edit Profile
           </div>
