Added documentation for editing accounts

--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -5,11 +5,12 @@
   <p>FAQs and how-tos for all the features of the site are provided here.
     Below is a list of all documentation currently provided.</p>
   <ul>
+    <li><a href="{% url 'faq-accounts' %}">Account Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-events' %}">Events Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-images' %}">Images Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-items' %}">Items Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-listings' %}">Listings Documentation/FAQ</a></li>
-    <li><a href="{% url 'faq-events' %}">Events Documentation/FAQ</a></li>
-    <li><a href="{% url 'faq-wishlists' %}">Wishlists Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-profiles' %}">Profile Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-wishlists' %}">Wishlists Documentation/FAQ</a></li>
   </ul>
 {% endblock %}
