Wrote tests and view for user to start a conversation with another user

--- a/marketapp/listings/templates/profiles/profile_detail.html
+++ b/marketapp/listings/templates/profiles/profile_detail.html
@@ -24,7 +24,7 @@
           </a>
         {% endif %}
         {% if profile.user.inquiriesOpen %}
-          <a href="">
+          <a href="{% url 'start-conversation' pk=profile.user.pk %}">
             <div class="btn btn-blue profile-btn">
               Message User
             </div>
