Added documentation for creating a conversation

--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -6,6 +6,7 @@
     Below is a list of all documentation currently provided.</p>
   <ul>
     <li><a href="{% url 'faq-accounts' %}">Account Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-conversations' %}">Conversations Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-events' %}">Events Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-images' %}">Images Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-items' %}">Items Documentation/FAQ</a></li>
