--- a/marketapp/listings/templates/profiles/profile_detail.html
+++ b/marketapp/listings/templates/profiles/profile_detail.html
@@ -30,11 +30,13 @@
             </div>
           </a>
         {% endif %}
-        <a href="{% url 'wishlist-detail' pk=profile.user.wishlist.id %}">
-          <div class="btn btn-blue profile-btn">
-            {{ profile.user }}'s Wishlist
-          </div>
-        </a>
+        {% if profile.user.wishlist %}
+          <a href="{% url 'wishlist-detail' pk=profile.user.wishlist.id %}">
+            <div class="btn btn-blue profile-btn">
+              {{ profile.user }}'s Wishlist
+            </div>
+          </a>
+        {% endif %}
       {% endif %}
     </div>
   </div>
